# exseas_explorer

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yaml  main.yml
docs/: Makefile  conf.py  exseas_explorer.rst  index.rst  installation.rst  make.bat  modules.rst  usage.rst
exseas_explorer/: FlaskApp.wsgi  __init__.py  app.py  util.py
exseas_explorer/FlaskApp/: __init__.py
exseas_explorer/assets/: color.js  dashExtensions_default.js  style.css
exseas_explorer/data/: README.md
exseas_explorer/preproc/: preproc.py
tests/: __init__.py  conftest.py  test_exseas_explorer.py  test_preproc.py  test_util.py
tests/data/: list_T2M_jja_Hot.txt  lit_T2M_jja_Hot.txt  patches_T2M_jja_ProbHot.nc  patches_T2M_jja_ProbHot_test.geojson  patches_T2M_jja_ProbHot_test.nc
