[tool.poetry]
name = "exseas_explorer"
version = "0.1.0"
description = "Web application displaying areas associated with extreme weather events"
authors = ["Roman Attinger"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
geopandas = "^0.10.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
xarray = "^2022.3.0"
pyproj = "^3.3.0"
rasterio = "^1.2.10"
Shapely = "^1.8.1"
dash = "^2.3.1"
dash-bootstrap-components = "^1.1.0"
dash-leaflet = "^0.1.23"
matplotlib = "^3.5.1"
dash-extensions = "^0.0.71"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
pytest = "^7.1.1"
Sphinx = "^4.5.0"
ipykernel = "^6.13.0"
sphinx-automodapi = "^0.14.1"
pydata-sphinx-theme = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
