[project]
name = "exseas_explorer"
version = "0.1.0"
description = "Web application displaying areas associated with extreme weather events"
authors = [{name = "Roman Attinger"}]
license = "MIT"
requires-python = ">=3.12, <3.13"

dependencies = [
  "click ~= 8.2.1",
  "geopandas ~= 1.1.1",
  "numpy ~= 2.2.6",
  "pandas ~= 2.2.3",
  "xarray ~= 2025.4.0",
  "pyproj ~= 3.7.1",
  "rasterio ~= 1.4.3",
  "shapely ~= 2.1.1",
  "dash ~= 2.18.2",
  "dash-bootstrap-components ~= 1.6.0",
  "dash-leaflet ~= 0.1.28",
  "matplotlib ~= 3.10.3",
  "dash-extensions ~= 1.0.20",
  "netCDF4 ~= 1.7.2",
  "geojson ~= 3.2.0",
  "fiona ~=1.10.1",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
sphinx = "^8.2.3"
ipykernel = "^6.29.5"
sphinx-automodapi = "^0.19.0"
pydata-sphinx-theme = "^0.16.1"
black = "^25.1.0"
poetry-plugin-export = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "exseas_explorer"
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "dash_bootstrap_components.*",
  "dash_extensions.*",
  "dash_leaflet.*",
  "dash.*",
  "geojson.*",
  "geopandas.*",
  "matplotlib.*",
  "pytest.*",
  "rasterio.*",
  "setuptools",
  "shapely.*",
]

[tool.ruff]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let the formatter worry about this
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "E", # Pycodestyle
  "F", # Pyflakes
  "I", # isort
  "TID",  # flake8-tidy-imports (absolute imports),
  "UP", # Pyupgrade
  "W", # warnings
]

[tool.ruff.lint.isort]
known-first-party = ["exseas_explorer"]
