[project]
name = "exseas_explorer"
version = "0.1.0"
description = "Web application displaying areas associated with extreme weather events"
authors = [{name = "Roman Attinger"}]
license = "MIT"
requires-python = ">=3.12, <3.13"

dependencies = [
  "click ==8.3.0",
  "dash ==3.2.0",
  "dash-bootstrap-components ==2.0.4",
  "dash-extensions ==2.0.4",
  "dash-leaflet ==1.1.3",
  "fiona ==1.10.1",
  "geojson ==3.2.0",
  "geopandas ==1.1.1",
  "matplotlib ==3.10.7",
  "netCDF4 ==1.7.3",
  "numpy ==2.3.4",
  "pandas ==2.3.3",
  "pyproj ==3.7.2",
  "rasterio ==1.4.3",
  "shapely ==2.1.2",
  "xarray ==2025.10.1",
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ipykernel = "^6.29.5"
mypy = "^1.18.2"
pandas-stubs = "^2.3.2.250926"
poetry = "2.2"
pytest = "^8.3.5"
pytest-cov = "^7.0.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core>=2.2", "setuptools>=42"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = "exseas_explorer"
show_error_codes = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "dash_bootstrap_components.*",
  "dash_extensions.*",
  "dash_leaflet.*",
  "dash.*",
  "geojson.*",
  "geopandas.*",
  "matplotlib.*",
  "pytest.*",
  "rasterio.*",
  "setuptools",
  "shapely.*",
]

[tool.ruff]

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let the formatter worry about this
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "E", # Pycodestyle
  "F", # Pyflakes
  "I", # isort
  "TID",  # flake8-tidy-imports (absolute imports),
  "UP", # Pyupgrade
  "W", # warnings
]

[tool.ruff.lint.isort]
known-first-party = ["exseas_explorer"]
